Correção de Bug de Rolagem no Menu Mobile.
Corrigido Bug de Rolagem que, mesmo com o Menu Mobile aberto e ocupando 100% da ViewPort do acesso Mobile/Tablet, exibia a rolagem da página inteira em Background, consequentemente, também realizando as animações dos Links de Navegação (por causa do ScrollSpy).
Desenvolvido um código JavaScript onde executa a função "CheckScroll()" dentro do evento de Click do Menu "hamburger" que adiciona/remove a Classe "dontScroll" se a "active" (ou seja, se esse Menu estiver aberto) existir nesse elemento, caso esse IF seja atendido, a classe aplica "OVERFLOW-Y - hiddden" na tag <html/> (documento inteiro), deixando o documento fixo no estado/scroll atual e bloqueando rolagens/scroll mesmo com o Menu aberto, que era o objetivo;
Após essa implementação, foi feita uma correção de um bug gerado onde essa Classe não era removida caso se clicasse nos Links de Navegação (Menu PopOut) após acessar o Menu, então mesmo que a página fosse para a Section desejada, rolagens posteriores ficavam bloqueadas (somente após dois clicks a classe era removida), adicionando a condição de remoção dessa Classe "dontScroll" na parte do Script "forEach" que trata dos Links de Navegação na variável "menu_item".

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ p { color: black; font-size: 1.5rem; margin-top: 5px; line-height: 2.5rem; font-
 .call_to_action:hover { color: #EFEFEB; background-color: #496D96; }
 div.brand h1.brand_title { font-size: 1.3rem; text-transform: uppercase; color: #B1BECD; margin-left: 10px; }
 div.brand h1.brand_title span.brand_span { color: #496D96; }
+.dontScroll { overflow-y: hidden; }
 /* End Global CSS Parameters */
 /* Main Header Menu */
 section#header { position: fixed; z-index: 1000; left: 0px; top: 0px; width: 100vw; height: auto; transition: 0.3s ease-out; transition-property: top; transition-delay: 0.15s; }
