--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ section#footer div.footer div.brand h1.brand_title { margin-bottom: 20px; }
 section#footer div.footer h2 { color: #B1BECD; font-weight: 500; text-transform: uppercase; font-size: 1rem; letter-spacing: 0.15rem; margin-bottom: 20px; }
 section#footer div.footer div.social_icon { display: flex; margin-bottom: 20px; }
 section#footer div.footer div.social_icon div.social_item { height: 50px; width: 50px; margin: 0px 5px; }
-section#footer div.footer p { color: #B1BECD; font-size: 1rem; font-weight: 400; }
+section#footer div.footer p { color: #B1BECD; font-size: 0.75rem; font-weight: 400; }
 /* End Footer Section */
 /* General Keyframes */
     @keyframes hamburger_puls { 0% { opacity: 1; transform: scale(1); } 100% { opacity: 0; transform: scale(1.4); } }
@@ -183,10 +183,10 @@ section#footer div.footer p { color: #B1BECD; font-size: 1rem; font-weight: 400;
     section#header div.header div.nav_bar div.nav_list ul { position: initial; display: block; height: auto; width: fit-content; background-image: none; }
     section#header div.header div.nav_bar div.nav_list ul a::after { display: none; }
     section#header div.header div.nav_bar div.nav_list ul li { display: inline-block; }
-    section#header div.header div.nav_bar div.nav_list ul li a { font-size: 1.9rem; border-radius: 10px;  transition: 0.15s ease-in-out; transition-property: color, background-color;}
-    section#header div.header div.nav_bar div.nav_list ul li { font-size: 1.9em; }
-    section#header div.header div.nav_bar div.nav_list ul li:hover a { font-size: 1.9rem; color: #29323C; background-color: #B1BECD; border-radius: 10px; }
-    section#header div.header div.nav_bar div.nav_list ul li a.active { font-size: 1.9rem; color: #29323C; background-color: #B1BECD; border-radius: 10px; }
+    section#header div.header div.nav_bar div.nav_list ul li a { font-size: 1.9rem; border-radius: 10px;  transition: 0.2s ease-in-out; transition-property: color, background-color, transform;}
+    section#header div.header div.nav_bar div.nav_list ul li { font-size: 1.9em; transform: scale(1);}
+    section#header div.header div.nav_bar div.nav_list ul li:hover a { font-size: 1.9rem; color: #29323C; background-color: #B1BECD; border-radius: 10px; transform: scale(0.90); }
+    section#header div.header div.nav_bar div.nav_list ul li a.active { font-size: 1.9rem; color: #29323C; background-color: #B1BECD; border-radius: 10px; transform: scale(0.90); }
     section#header div.header div.nav_bar div.nav_list div.hamburger { display: none; }
     /* End Main Header Menu */
     /* Section Home */
